# asphalt-kafka

./: .gitignore  .pre-commit-config.yaml  README.rst  docker-compose.yml  pyproject.toml
.github/workflows/: test.yml
docs/: api.rst  conf.py  configuration.rst  usage.rst
examples/: admin.py  consumer.py  producer.py
src/asphalt/kafka/: __init__.py  _admin.py  _consumer.py  _producer.py
tests/: test_admin_client.py  test_consumer.py  test_producer.py
