[build-system]
requires = [
    "setuptools >= 64",
    "setuptools_scm >= 6.4"
]
build-backend = "setuptools.build_meta"

[project]
name = "asphalt-kafka"
description = "Kafka component for the Asphalt framework"
readme = "README.rst"
authors = [{name = "Alex Grönholm", email = "alex.gronholm@nextday.fi"}]
license = {text = "Apache License 2.0"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.9"
dependencies = [
    "asphalt @ git+https://github.com/asphalt-framework/asphalt",
    "aiokafka >= 0.10",
]
dynamic = ["version"]

[project.urls]
Documentation = "https://asphalt-kafka.readthedocs.org/en/latest/"
"Source code" = "https://github.com/asphalt-framework/asphalt-kafka"
"Issue tracker" = "https://github.com/asphalt-framework/asphalt-kafka/issues"
"Help and support" = "https://github.com/asphalt-framework/asphalt/wiki/Help-and-support"

[project.optional-dependencies]
test = [
    "anyio[trio] ~= 4.1",
    "coverage >= 7",
    "pytest >= 7.4",
]
doc = [
    "Sphinx >= 7.0",
    "sphinx-rtd-theme >= 1.3.0",
    "sphinx-autodoc-typehints >= 1.22",
]

[project.entry-points."asphalt.components"]
kafka_admin = "asphalt.kafka:KafkaAdminComponent"
kafka_consumer = "asphalt.kafka:KafkaConsumerComponent"
kafka_producer = "asphalt.kafka:KafkaProducerComponent"

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "dirty-tag"

[tool.ruff.lint]
extend-select = [
    "ASYNC",        # flake8-async
    "G",            # flake8-logging-format
    "I",            # isort
    "ISC",          # flake8-implicit-str-concat
    "PGH",          # pygrep-hooks
    "RUF",          # Ruff-specific rules
    "UP",           # pyupgrade
    "W",            # pycodestyle warnings
]

[tool.ruff.lint.isort]
known-first-party = ["asphalt.kafka"]
known-third-party = ["asphalt.core"]

[tool.mypy]
python_version = "3.9"
strict = true
explicit_package_bases = true
mypy_path = ["src", "tests", "examples"]

[tool.pytest.ini_options]
addopts = ["-rsfE", "--tb=short"]

[tool.coverage.run]
source = ["asphalt.kafka"]
relative_files = true
branch = true

[tool.coverage.report]
show_missing = true

[tool.tox]
env_list = ["py39", "py310", "py311", "py312", "py313", "pypy3"]
skip_missing_interpreters = true

[tool.tox.env_run_base]
commands = [["python", "-m", "pytest", { replace = "posargs", extend = true }]]
package = "editable"
extras = ["test"]

[tool.tox.env.docs]
commands = [["sphinx-build", "-W", "-n", "docs", "build/sphinx", { replace = "posargs", extend = true }]]
extras = ["doc"]
